# Rate-My-Professors-API-Client-Python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: configuration.html  configuration.md  extras.html  extras.md  index.html  index.md  reference.html  reference.md  script.js  style.css  usage.html  usage.md
examples/: get_professor.py  ingest_supabase.py  search_professors.py
scripts/: verify_client.py
src/rmp_client/: __init__.py  client.py  config.py  errors.py  http.py  models.py  queries.py  rate_limit.py  relay_store.py
src/rmp_client/extras/: __init__.py  course_codes.py  dedupe.py  helpers.py  sentiment.py
tests/: test_client.py  test_config.py  test_errors.py  test_extras.py  test_http.py  test_rate_limit.py  test_relay_store.py
