[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratemyprofessors-client"
version = "2.1.0"
description = "Typed, retrying, rate-limited unofficial Python client for the RateMyProfessors GraphQL API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Amaan", email = "amaanjaved2004@gmail.com" },
]
keywords = ["ratemyprofessors", "api-client", "graphql", "ratings"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "textblob>=0.18.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-httpx",
  "mypy",
  "ruff",
  "black",
]

[project.urls]
Repository = "https://github.com/amaanjaved1/Rate-My-Professors-API-Client"
Documentation = "https://amaanjaved1.github.io/Rate-My-Professors-API-Client/"

[tool.hatch.build.targets.wheel]
packages = ["src/rmp_client"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
  "LICENSE",
  "docs",
  "examples",
]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 100

